--- a/chef-repo/cookbooks/rvm/Rakefile
+++ b/chef-repo/cookbooks/rvm/Rakefile
@@ -1,32 +1,29 @@
 #!/usr/bin/env rake
 
-require 'foodcritic'
-require 'rake/testtask'
+@cookbook = "rvm"
 
-begin
-  require 'emeril/rake'
-rescue LoadError
-  puts ">>>>> Emeril gem not loaded, omitting tasks" unless ENV['CI']
+desc "Runs foodcritc linter"
+task :foodcritic do
+  if Gem::Version.new("1.9.2") <= Gem::Version.new(RUBY_VERSION.dup)
+    sandbox = File.join(File.dirname(__FILE__), %w{tmp foodcritic}, @cookbook)
+    prepare_foodcritic_sandbox(sandbox)
+
+    sh "foodcritic --epic-fail any #{File.dirname(sandbox)}"
+  else
+    puts "WARN: foodcritic run is skipped as Ruby #{RUBY_VERSION} is < 1.9.2."
+  end
 end
 
-# FC041 is excluded because we want to preserve the official RVM installation
-# process as much as possible, i.e. using curl to download the installer.
-FoodCritic::Rake::LintTask.new do |t|
-  t.options = { :fail_tags => ['any'], :tags => ['~FC041'] }
+task :default => 'foodcritic'
+
+private
+
+def prepare_foodcritic_sandbox(sandbox)
+  files = %w{*.md *.rb attributes definitions files providers
+    recipes resources templates}
+
+  rm_rf sandbox
+  mkdir_p sandbox
+  cp_r Dir.glob("{#{files.join(',')}}"), sandbox
+  puts "\n\n"
 end
-
-
-Rake::TestTask.new do |t|
-  t.name = "unit"
-  t.test_files = FileList['test/unit/**/*_spec.rb']
-  t.verbose = true
-end
-
-begin
-  require 'kitchen/rake_tasks'
-  Kitchen::RakeTasks.new
-rescue LoadError
-  puts ">>>>> Kitchen gem not loaded, omitting tasks" unless ENV['CI']
-end
-
-task :default => [:foodcritic, :unit]
